--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
     "react-bootstrap": "^1.3.0",
+    "react-router-dom": "^5.2.0",
     "react-strap": "0.0.1"
   }
 }
