--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@oclif/command": "^1.8.0",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.2",
     "express": "^4.16.3",
