--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "@oclif/command": "^1.8.0",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.2",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.16"
+    "mongoose": "^5.3.16",
+    "path": "^0.12.7"
   }
 }
